# router

./: .gitignore  .mergify.yml  CHANGELOG.md  Cargo.toml  RELEASE_CHECKLIST.md  flake.nix  licenses.html  rust-toolchain.toml
.changesets/: docs_authorization_root_operation_types.md  docs_demand_control_list_slicing_args.md  docs_docs_deprecate_session_count_active.md  docs_log_operations_exceeding_candidate_limits.md  docs_photography_corkscrew_champagne_computer.md  docs_remove_cloud_router.md  exp_http_otel_producer.md  feat_allow_missing_exp_per_jwks.md  feat_caroline_rh1334_pool_idle_eviction_mode.md  feat_caroline_rh_1334_connection_acquire_duration.md  feat_caroline_router_1688.md  feat_caroline_router_1694_file_upload_operation_body_timeout.md  feat_caroline_subgraph_connector_response_size_limits.md  feat_dedup_cache_fast_path.md  feat_expand_json_string_values_log_formatter.md  feat_include_cache_control_header_on_router_response.md  feat_jc_rhai_duration_metric.md  feat_requires_field_argument_variables.md  feat_rhai_max_strings_interned.md  feat_rohan_b99_subscription_observability_heartbeat_payload_errors.md  feat_selective_body_coprocessor.md  feat_subscription_dedup_ignore_auth_context.md  feat_support_trailing_slash.md  feat_telemetry_response_error_selectors.md  feat_zach_router_1439_subscription_max_lifetime.md  fix_aaron_redis_eager_connections.md  fix_caroline_router_1375.md  (+56 more)
apollo-planner-cli/: Cargo.toml
apollo-planner-cli/src/: main.rs
apollo-router-benchmarks/: Cargo.toml
apollo-router-benchmarks/benches/: query_plan_cache_concurrency.rs
(+547 files in other folders)
