[package]
name = "apollo-router-benchmarks"
version = "2.14.2-rc.0"
authors = ["Apollo Graph, Inc. <packages@apollographql.com>"]
edition = "2021"
license = "Elastic-2.0"
publish = false

[dev-dependencies]
apollo-router = { path = "../apollo-router" }
criterion = { version = "0.8", features = ["async_tokio", "async_futures"] }
futures = "0.3"
memory-stats = "1.1.0"
once_cell.workspace = true
rhai = { version = "1.23.6", features = ["sync", "serde", "internals"] }
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true

[build-dependencies]
apollo-smith.workspace = true
apollo-parser.workspace = true
arbitrary = "1.3.2"

[[bench]]
name = "basic_composition"
harness = false

[[bench]]
name = "memory_use"
harness = false

[[bench]]
name = "rhai_string_interning"
harness = false

[[bench]]
name = "query_plan_cache_concurrency"
harness = false
